--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "serve dist -s -n  -L"
+    "start": "serve dist -s -n  -L -p $PORT"
   },
   "dependencies": {
     "react": "^18.2.0",
